Refactor to have all service tests